--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         <h2>zmien rozmiar</h2>
     </div>
 
+    <div class="div" id="maska">
+        <h2>maska</h2>
+    </div>
+
+    <div class="div" id="cursor">
+        <div class="kursory" id="grab"></div>
+        <div class="kursory" id="grabbing"></div>
+        <div class="kursory" id="move"></div>
+        <div class="kursory" id="none"></div>
+        <div class="kursory" id="pointer"></div>
+        <div class="kursory" id="progress"></div>
+        <div class="kursory" id="wait"></div>
+        <div class="kursory" id="crosshair"></div>
+        <div class="kursory" id="zoom_in"></div>
+        <div class="kursory" id="zoom_out"></div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
