--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STYLE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="punkty()">
-    
+
+    <div style="width: 100%; height: 50px; background-color: gray;display: flex; align-items: center; justify-content: center; gap: 20px;">
+        <a href="index.html">MAIN</a>
+        <a href="ind2.html">CUBE</a>
+    </div>
+
     <div class="div" id="fala"></div>
 
     <div class="div" id="rama">
