--- a/ind2.html
+++ b/ind2.html
@@ -12,14 +12,24 @@
         <a href="ind2.html">CUBE</a>
     </div>
 
+    <div id="pomoc" style="padding-left: 30px; padding-top: 5px;">
+        <input type="number" id="xx" placeholder="x" value="24">
+        <input type="number" id="yy" placeholder="y" value="55">
+        <input type="number" id="zz" placeholder="z" value="75">
+        <input type="number" id="angle" placeholder="angle" value="215">
+        <input type="number" id="top" placeholder="top">
+        <input type="number" id="left" placeholder="left">
+        <button onclick="gora()">zmien</button>
+    </div>
+
     <div id="cube">
         <div class="bok" id="b1"></div>
         <div class="bok" id="b2"></div>
         <div class="bok" id="b3"></div>
-        <div class="bok" id="b4"></div>
-        <div class="bok" id="b5"></div>
+
         <div class="bok" id="b6"></div>
     </div>
     
+    <script src="app.js"></script>
 </body>
 </html>
