--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="div" id="media">
-        <h2>zmien rozmiar</h2>
+        <h2>zmien rozmiar okna przegladarki</h2>
     </div>
 
     <div class="div" id="maska">
@@ -49,6 +49,11 @@
         <div class="kursory" id="crosshair"></div>
         <div class="kursory" id="zoom_in"></div>
         <div class="kursory" id="zoom_out"></div>
+    </div>
+
+    <div class="div" id="ress">
+        <h2>zmien rozmiar recznie</h2>
+        <p>prawy dolny róg</p>
     </div>
 
     <script src="app.js"></script>
