--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <p>prawy dolny róg</p>
     </div>
 
+    <div class="div" id="columns">
+        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam deleniti possimus perferendis. Perspiciatis doloremque animi alias voluptatibus ducimus, veniam eveniet aut, qui magni tenetur harum dolores dolor voluptates provident amet.</h3>
+    </div>
+
+    <div class="div" id="off">
+        <div id="offset"></div>
+        <svg fill="none" stroke="gray" stroke-width="2" style="position: absolute; top:204.5vh; left:47%;">
+            <path d="M0,70 C50 -20 75 120 150 70 C50 20 75 120 0 70"/>
+        </svg>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
