--- a/ind2.html
+++ b/ind2.html
@@ -9,7 +9,7 @@
 <body>
     <div style="width: 100%; height: 50px; background-color: gray;display: flex; align-items: center; justify-content: center; gap: 20px;">
         <a href="index.html">MAIN</a>
-        <a href="ind2.html">CUBE</a>
+        <a href="ind2.html">rotate 3D</a>
     </div>
 
     <div id="pomoc" style="padding-left: 30px; padding-top: 5px;">
@@ -17,17 +17,11 @@
         <input type="number" id="yy" placeholder="y" value="55">
         <input type="number" id="zz" placeholder="z" value="75">
         <input type="number" id="angle" placeholder="angle" value="215">
-        <input type="number" id="top" placeholder="top">
-        <input type="number" id="left" placeholder="left">
         <button onclick="gora()">zmien</button>
     </div>
 
-    <div id="cube">
-        <div class="bok" id="b1"></div>
-        <div class="bok" id="b2"></div>
-        <div class="bok" id="b3"></div>
-
-        <div class="bok" id="b6"></div>
+    <div id="div">
+        <div id="bok"></div>
     </div>
     
     <script src="app.js"></script>
