--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div style="width: 100%; height: 50px; background-color: gray;display: flex; align-items: center; justify-content: center; gap: 20px;">
         <a href="index.html">MAIN</a>
-        <a href="ind2.html">CUBE</a>
+        <a href="ind2.html">rotate 3D</a>
     </div>
 
     <div class="div" id="fala"></div>
